# cargo-what

./: Cargo.toml  LICENSE.md  README.md  build.rs
.github/workflows/: main.yml
examples/: what-args.rs  what-more-complex.rs  what-multiline.rs  what-nested.rs  what-traits.rs  what.rs
src/: lib.rs
tests/: examples.rs
