[package]
name = "cargo-what"
version = "0.1.0"
edition = "2018"
authors = ["Christopher Haster <chaster@utexas.edu>"]
license = "MIT"

description = "Tells you what type things are"
readme = "README.md"
repository = "https://github.com/geky/cargo-what"
keywords = ["macro", "todo", "debug"]
categories = ["command-line-utilities", "development-tools::debugging"]

[[bin]]
name = "cargo-what"

[dependencies]
anyhow = "1.0"
atty = "0.2"
serde_json = "1.0"
regex = "1.3"
lazy_static = "1.4"
paste = "1.0"
term = "0.4"
colored = "2.0"
