[package]
name = "cargo-what"
version = "0.1.3"
edition = "2018"
authors = ["Christopher Haster <chaster@utexas.edu>"]
license = "MIT"

description = "Tells you what type things are"
readme = "README.md"
repository = "https://github.com/geky/cargo-what"
documentation = "https://docs.rs/cargo-what"
keywords = ["macro", "todo", "debug"]
categories = ["command-line-utilities", "development-tools::debugging"]

[[bin]]
name = "cargo-what"
required-features = ["build-bin"]

[dependencies]
# lib dependencies
paste = "1.0"

# binary dependencies
anyhow = {version="1.0", optional=true}
atty = {version="0.2", optional=true}
serde_json = {version="1.0", optional=true}
regex = {version="1.3", optional=true}
lazy_static = {version="1.4", optional=true}
term = {version="0.4", optional=true}
colored = {version="2.0", optional=true}

[dev-dependencies]
anyhow = "1.0"

[features]
build-bin = [
    "anyhow",
    "atty",
    "serde_json",
    "regex",
    "lazy_static",
    "term",
    "colored"
]
